<resources>
    <string name="app_name">Awemusic</string>
    <string name="preference_key">ADoISsJBO14RgA2x3f14</string>
    <string name="password">Password</string>
    <string name="username">Email or username</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="composer">Composer</string>
    <string name="title">Title</string>
    <string name="password_confirm">Password confirm</string>
    <string name="email">Email</string>
    <string name="dont_have_account">Don\'t have an account? Sign up here!</string>
    <string name="demo_version">Sorry, this is demo version</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="log_out">Log Out</string>

</resources>