<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.music.awesomemusic.functionalities.login.LoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".functionalities.login.LoginActivity">

        <!--Logo-->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/awesome_music_logo"
            android:transitionName="start_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/itim"
            android:text="Awemusic"
            android:textColor="#ffffff"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <LinearLayout
            android:id="@+id/login_activity_card_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:background="@drawable/holder_login_activity_cred"
            android:orientation="vertical"
            android:translationY="300sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/et_credentials"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:text="@={viewModel.usernameObservable}"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/et_credentials"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:text="@={viewModel.passwordObservable}"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/login_activity_tv_bad_credentials"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/ubuntu_mono_bold"
                android:text="Wrong credetials"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_login"
                android:onClick="@{()->viewModel.login()}"
                android:padding="15dp"
                android:shadowColor="@android:color/transparent"
                android:text="@string/log_in" />

            <!--        <com.airbnb.lottie.LottieAnimationView-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="50dp"-->
            <!--            app:lottie_autoPlay="true"-->
            <!--            app:lottie_loop="true"-->
            <!--            app:lottie_rawRes="@raw/anim_btn_floating_white"-->
            <!--            />-->

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_signup"
                android:onClick="@{()->viewModel.signUp()}"
                android:padding="15dp"
                android:shadowColor="@android:color/transparent"
                android:text="@string/sign_up"
                android:textColor="@color/white" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>